--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,11 @@
     </head>
     <body>
         <header class="header">
+            <p class="brand">Dan's resteraunt</p>
             <nav>
-                <button class="home"></button>
-                <button class="menu"></button>
-                <button class="about"></button>
+                <button class="home" id="button">HOME</button>
+                <button class="menu" id="button">MENU</button>
+                <button class="about" id="button">ABOUT</button>
             </nav>
         </header>
         <div class="content">
