--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,6 @@
                 <button class="about" id="button">ABOUT</button>
             </nav>
         </header>
-        <div class="content">
-            
-        </div>
+        <div class="content"></div>
     </body>
 </html>
